--- a/CBLauncher/AddFavorite.es.resx
+++ b/CBLauncher/AddFavorite.es.resx
@@ -117,24 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Label1.Text" xml:space="preserve">
-    <value>¿Cómo quieres llamarlo?</value>
-  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="TextBox1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>16, 30</value>
+  <data name="OK_Button.Size" type="System.Drawing.Size, System.Drawing">
+    <value>85, 23</value>
   </data>
-  <data name="TextBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>168, 20</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="TableLayoutPanel1.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Right</value>
-  </data>
-  <data name="TableLayoutPanel1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 56</value>
-  </data>
-  <data name="TableLayoutPanel1.MaximumSize" type="System.Drawing.Size, System.Drawing">
-    <value>201, 29</value>
+  <data name="OK_Button.Text" xml:space="preserve">
+    <value>Añadir favorito</value>
   </data>
 </root>
