--- a/CBLauncher/Form1.es.resx
+++ b/CBLauncher/Form1.es.resx
@@ -118,20 +118,11 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="OutPutTextBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>584, 266</value>
-  </data>
-  <data name="InputTextBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>584, 18</value>
-  </data>
   <data name="JarPathText.Size" type="System.Drawing.Size, System.Drawing">
     <value>139, 15</value>
   </data>
   <data name="JarPathText.Text" xml:space="preserve">
     <value>No hay JAR seleccionado</value>
-  </data>
-  <data name="StatusStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>584, 20</value>
   </data>
   <data name="FavoritesButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -232,6 +223,37 @@
   <data name="ForceStopButton.Text" xml:space="preserve">
     <value>Forzar detención</value>
   </data>
+  <data name="LogsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>172, 22</value>
+  </data>
+  <data name="LogsToolStripMenuItem.Text" xml:space="preserve">
+    <value>Registros</value>
+  </data>
+  <data name="EditPropertiesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>172, 22</value>
+  </data>
+  <data name="EditPropertiesToolStripMenuItem.Text" xml:space="preserve">
+    <value>Editar Propiedades</value>
+  </data>
+  <data name="ManagePlayersToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>172, 22</value>
+  </data>
+  <data name="RegenerateWorldToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>172, 22</value>
+  </data>
+  <data name="RegenerateWorldToolStripMenuItem.Text" xml:space="preserve">
+    <value>Regenerar mundo</value>
+  </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="ExtrasToolStripMenuItem.Enabled" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
+  <data name="ExtrasToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>200, 22</value>
+  </data>
+  <data name="ExtrasToolStripMenuItem.Text" xml:space="preserve">
+    <value>Extras (En Desarrollo)</value>
+  </data>
   <data name="ClearToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>200, 22</value>
   </data>
@@ -244,11 +266,29 @@
   <data name="CopyAllToolStripMenuItem.Text" xml:space="preserve">
     <value>Copiar todo</value>
   </data>
-  <data name="ConsoleToolStripMenuItem.Text" xml:space="preserve">
-    <value>Consola</value>
+  <data name="ConsoleToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>200, 22</value>
   </data>
-  <data name="BookToolStripMenuItem.Text" xml:space="preserve">
-    <value>Libro</value>
+  <data name="ConsoleToolStripMenuItem.Text" xml:space="preserve">
+    <value>Estilo por defecto</value>
+  </data>
+  <data name="ChangeFontToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>200, 22</value>
+  </data>
+  <data name="ChangeFontToolStripMenuItem.Text" xml:space="preserve">
+    <value>Cambiar tipo de letra</value>
+  </data>
+  <data name="ForeColorToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>200, 22</value>
+  </data>
+  <data name="ForeColorToolStripMenuItem.Text" xml:space="preserve">
+    <value>Cambiar color de letra</value>
+  </data>
+  <data name="ChangeBackcolorToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>200, 22</value>
+  </data>
+  <data name="ChangeBackcolorToolStripMenuItem.Text" xml:space="preserve">
+    <value>Cambiar color de fondo</value>
   </data>
   <data name="FontTypeToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>200, 22</value>
@@ -258,52 +298,6 @@
   </data>
   <data name="ToolStripSeparator3.Size" type="System.Drawing.Size, System.Drawing">
     <value>197, 6</value>
-  </data>
-  <data name="EditPropertiesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>187, 22</value>
-  </data>
-  <data name="EditPropertiesToolStripMenuItem.Text" xml:space="preserve">
-    <value>Editar Propiedades</value>
-  </data>
-  <data name="OperatorsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>187, 22</value>
-  </data>
-  <data name="OperatorsToolStripMenuItem.Text" xml:space="preserve">
-    <value>Operadores</value>
-  </data>
-  <data name="WhiteListToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>187, 22</value>
-  </data>
-  <data name="WhiteListToolStripMenuItem.Text" xml:space="preserve">
-    <value>Lista blanca</value>
-  </data>
-  <data name="BannedPlayersToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>187, 22</value>
-  </data>
-  <data name="BannedPlayersToolStripMenuItem.Text" xml:space="preserve">
-    <value>Jugadores prohibidos</value>
-  </data>
-  <data name="RegenerateWorldToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>187, 22</value>
-  </data>
-  <data name="RegenerateWorldToolStripMenuItem.Text" xml:space="preserve">
-    <value>Regenerar mundo</value>
-  </data>
-  <data name="LogsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>187, 22</value>
-  </data>
-  <data name="LogsToolStripMenuItem.Text" xml:space="preserve">
-    <value>Registros</value>
-  </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="ExtrasToolStripMenuItem.Enabled" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="ExtrasToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>200, 22</value>
-  </data>
-  <data name="ExtrasToolStripMenuItem.Text" xml:space="preserve">
-    <value>Extras (En Desarrollo)</value>
   </data>
   <data name="AddFavoriteToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>200, 22</value>
@@ -368,23 +362,68 @@
   <data name="ToolStripButton2.Text" xml:space="preserve">
     <value>Más</value>
   </data>
+  <data name="ReloadToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>172, 22</value>
+  </data>
+  <data name="ReloadToolStripMenuItem.Text" xml:space="preserve">
+    <value>Recargar</value>
+  </data>
+  <data name="ToggleDownfallToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>172, 22</value>
+  </data>
+  <data name="ToggleDownfallToolStripMenuItem.Text" xml:space="preserve">
+    <value>Lluvia</value>
+  </data>
+  <data name="ThunderToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>172, 22</value>
+  </data>
+  <data name="ThunderToolStripMenuItem.Text" xml:space="preserve">
+    <value>Tormenta</value>
+  </data>
+  <data name="ClearWeatherToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>172, 22</value>
+  </data>
+  <data name="ClearWeatherToolStripMenuItem.Text" xml:space="preserve">
+    <value>Tiempo despejado</value>
+  </data>
+  <data name="SetDayToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>172, 22</value>
+  </data>
+  <data name="SetDayToolStripMenuItem.Text" xml:space="preserve">
+    <value>Establecer Día</value>
+  </data>
+  <data name="SetNightToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>172, 22</value>
+  </data>
+  <data name="SetNightToolStripMenuItem.Text" xml:space="preserve">
+    <value>Establecer Noche</value>
+  </data>
+  <data name="MoreCommands.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
+        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
+        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
+        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
+        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
+        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
+        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
+        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
+        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
+        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="MoreCommands.Size" type="System.Drawing.Size, System.Drawing">
+    <value>42, 22</value>
+  </data>
+  <data name="MoreCommands.Text" xml:space="preserve">
+    <value>Más</value>
+  </data>
   <data name="ToolStripLabel2.Size" type="System.Drawing.Size, System.Drawing">
     <value>103, 22</value>
   </data>
   <data name="ToolStripLabel2.Text" xml:space="preserve">
     <value>Memoria Máxima:</value>
-  </data>
-  <data name="ToolStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>584, 25</value>
-  </data>
-  <data name="ListBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>584, 266</value>
-  </data>
-  <data name="OutPutPanel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>584, 266</value>
-  </data>
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>584, 329</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
