--- a/CBLauncher/Strings.es.resx
+++ b/CBLauncher/Strings.es.resx
@@ -181,4 +181,7 @@ Nombre del proceso y PID: </value>
   <data name="NotFound" xml:space="preserve">
     <value>Archivo no encontrado</value>
   </data>
+  <data name="HowToNameIt" xml:space="preserve">
+    <value>¿Cómo desea llamarlo?</value>
+  </data>
 </root>
