--- a/CBLauncher/Settings.es.resx
+++ b/CBLauncher/Settings.es.resx
@@ -123,11 +123,17 @@
   <data name="GroupBox2.Text" xml:space="preserve">
     <value>Ruta predefinida para guardar un acceso directo</value>
   </data>
+  <data name="GroupBox1.Text" xml:space="preserve">
+    <value>Ruta predefinida para abrir un nuevo Jar</value>
+  </data>
   <data name="Button1.Text" xml:space="preserve">
     <value>Examinar</value>
   </data>
-  <data name="GroupBox1.Text" xml:space="preserve">
-    <value>Ruta predefinida para abrir un nuevo Jar</value>
+  <data name="TabPage1.Text" xml:space="preserve">
+    <value>Principal</value>
+  </data>
+  <data name="GroupBox4.Text" xml:space="preserve">
+    <value>Idioma (Próximamente)</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="CheckBox2.Size" type="System.Drawing.Size, System.Drawing">
@@ -136,14 +142,29 @@
   <data name="CheckBox2.Text" xml:space="preserve">
     <value>Detectar automáticamente</value>
   </data>
-  <data name="GroupBox4.Text" xml:space="preserve">
-    <value>Idioma (Próximamente)</value>
+  <data name="TabPage3.Text" xml:space="preserve">
+    <value>Avanzado</value>
   </data>
-  <data name="TabPage1.Text" xml:space="preserve">
-    <value>Principal</value>
+  <data name="GroupBox6.Text" xml:space="preserve">
+    <value>Memoria máxima</value>
+  </data>
+  <data name="Label1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>145, 13</value>
+  </data>
+  <data name="Label1.Text" xml:space="preserve">
+    <value>Memoria máxima por defecto:</value>
+  </data>
+  <data name="CheckBox4.Size" type="System.Drawing.Size, System.Drawing">
+    <value>279, 17</value>
+  </data>
+  <data name="CheckBox4.Text" xml:space="preserve">
+    <value>Mostrar caja de memoria máxima en la barra de menú.</value>
   </data>
   <data name="Button3.Text" xml:space="preserve">
     <value>Restablecer ajustes</value>
+  </data>
+  <data name="GroupBox5.Text" xml:space="preserve">
+    <value>¿Qué antes de salir?</value>
   </data>
   <data name="CheckBox3.Size" type="System.Drawing.Size, System.Drawing">
     <value>162, 17</value>
@@ -163,8 +184,8 @@
   <data name="StopRadio.Text" xml:space="preserve">
     <value>Detener el servidor.</value>
   </data>
-  <data name="GroupBox5.Text" xml:space="preserve">
-    <value>¿Qué antes de salir?</value>
+  <data name="GroupBox3.Text" xml:space="preserve">
+    <value>Ruta para Javaw y argumentos</value>
   </data>
   <data name="CheckBox1.Size" type="System.Drawing.Size, System.Drawing">
     <value>142, 17</value>
@@ -172,11 +193,9 @@
   <data name="CheckBox1.Text" xml:space="preserve">
     <value>Argumentos automáticos</value>
   </data>
-  <data name="GroupBox3.Text" xml:space="preserve">
-    <value>Ruta para Javaw y argumentos</value>
-  </data>
-  <data name="TabPage3.Text" xml:space="preserve">
-    <value>Avanzado</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>Inherit</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Ajustes</value>
