--- a/CBLauncher/Settings.es.resx
+++ b/CBLauncher/Settings.es.resx
@@ -133,14 +133,21 @@
     <value>Principal</value>
   </data>
   <data name="GroupBox4.Text" xml:space="preserve">
-    <value>Idioma (Próximamente)</value>
+    <value>Otros</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="Button4.Size" type="System.Drawing.Size, System.Drawing">
+    <value>218, 23</value>
+  </data>
+  <data name="Button4.Text" xml:space="preserve">
+    <value>Elegir la versión de CraftBukkit por defecto</value>
+  </data>
   <data name="CheckBox2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>151, 17</value>
+    <value>392, 30</value>
   </data>
   <data name="CheckBox2.Text" xml:space="preserve">
-    <value>Detectar automáticamente</value>
+    <value>Iniciar el servidor con la versión de CraftBukkit ajustada como predeterminada
+al seleccionarlo por carpeta o con el menú de favoritos.</value>
   </data>
   <data name="TabPage3.Text" xml:space="preserve">
     <value>Avanzado</value>
