--- a/CBLauncher/Worlds.es.resx
+++ b/CBLauncher/Worlds.es.resx
@@ -2150,6 +2150,10 @@
         AA==
 </value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
+    <value>CenterScreen</value>
+  </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Mundos</value>
   </data>
